--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+     {% if site.google_analytics %}
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116541596-6"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'UA-116541596-6');
+        </script>
+    {% endif %}
     <meta charset="UTF-8">
     <title>The User Services Platform - Standardized IoT Management and Control</title>
     <meta name="description" content="{{ page.description | default: site.description | default: site.github.project_tagline }}"/>
@@ -38,7 +48,7 @@
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-116541596-1', 'auto');
+        ga('create', 'UA-116541596-6', 'auto');
         ga('send', 'pageview');
       </script>
     {% endif %}
