Fixes links back to usp.technology

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,11 +25,11 @@
   style="text-decoration:none;
   color:white;"><img src="{{'/assets/img/bbflogo-bw.png' | relative_url}}"/><br>User Services Platform (USP)</a></h1>
       <h2 class="project-tagline">A standardized protocol to manage, monitor, update, and control connected devices, IoT endpoints, user services and home networks.</h2>
-      <p><a class="btn" href="{{'/specification' | relative_url}}">Specification</a>
+      <p><a class="btn" href="{{'https://usp.technology/specification' | relative_url}}">Specification</a>
       <a class="btn" href="https://broadbandforum.github.io/usp-data-models/">Data Models</a>
       <a class="btn" href="https://usp-compliance.broadband-forum.org">Test Plan</a>
-      <a class="btn" href="{{'/resources' | relative_url}}">Dev Resources</a>
-      <a class="btn" href="{{'/faq' | relative_url}}">FAQ</a></p>
+      <a class="btn" href="{{'https://usp.technology/resources' | relative_url}}">Dev Resources</a>
+      <a class="btn" href="{{'https://usp.technology/faq' | relative_url}}">FAQ</a></p>
     </section>
 
     <section class="main-content">
